Overflow Styling Fixed

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -43,11 +43,10 @@ a {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    overflow: hidden;
     background-color: #704f38;
     width: 100%;
     height: 50px;
-    position: fixed;
+    position:fixed;
     top: 0;
     left: 0;
 }
@@ -156,6 +155,7 @@ tr:nth-child(odd) {
     width: 20vw;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 }
 
 .profile-pic {
@@ -197,9 +197,12 @@ tr:nth-child(odd) {
 
 .tab-content.active {
     display: block;
+    overflow: hidden;
 }
 
 /* Profile Settings Content */
+
+/* ----------------------------------Needs to be redone-----------------------------------*/
 
 .profile-content {
     position: absolute;
@@ -286,6 +289,9 @@ tr:nth-child(odd) {
 .modal a {
     cursor: pointer;
 }
+/*----------------------------------END OF WHAT NEEDS TO BE DONE----------------------------------*/
+
+
 
 /* Profile Bubble Content */
 
@@ -393,7 +399,6 @@ tr:nth-child(odd) {
     display: inline;
     margin: 0;
   }
-  
 
 /* Profile Spending Habits */
 
